# custom-copilot

./: .gitignore  AGENTSKILLS.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FAST_CUSTOMIZATION.md  GIT_REPO_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_NEW.md  INSTALL.md  LICENSE  MIGRATION.md  QUICK_INSTALL.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/agents/: skill-builder.agent.md
.github/skills/ace-fca/: PROJECT-SETUP.md  QUICK-REFERENCE.md  README.md  SKILL.md
.github/skills/flutter-app-release/: SKILL.md
.github/skills/flutter-clean-architecture/: SKILL.md
.github/skills/flutter-testing/: SKILL.md
.github/skills/gcp-firebase-infrastructure/: SKILL.md
.github/skills/github-actions-cicd/: SKILL.md
.github/skills/github-copilot-customizer/: SKILL.md
.github/skills/python-testing/: SKILL.md
.github/skills/shadcn-design-patterns/: SKILL.md
.github/skills/skill-creator/: SKILL.md
.github/skills/subagent-driven-development/: SKILL.md  spec-reviewer-prompt.md
.github/skills/ui-shadcn-flutter/: SKILL.md
.github/workflows/: test.yml
copilot-customizations/: README.md
copilot-customizations/bundles/development-essentials/: bundle.json  copilot-instructions.md
custom_copilot/: README.md
custom_copilot/instructions/: sample.md
custom_copilot/templates/: agent-template.agent.md  prompt-template.prompt.md
docs/: BEFORE_AFTER.md  IMPLEMENTATION_SUMMARY.md  RESTRUCTURE_SUMMARY.md
src/cc/: __init__.py  __main__.py  cli.py  utils.py
src/cc/commands/: __init__.py  (+6 more)
src/custom_copilot/: __main__.py  cli.py  config.py  utils.py
src/custom_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: README.md  __init__.py  conftest.py  test_config.py  test_init.py  test_publish.py  test_template.py  test_utils.py
(+119 files in other folders)
