[project]
name = "custom-copilot"
version = "0.1.0"
description = "Custom Copilot CLI - A tool for managing GitHub Copilot customizations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    {name = "DJ2695", email = "35080988+DJ2695@users.noreply.github.com"}
]
license = {text = "MIT"}
keywords = ["github", "copilot", "cli", "mcp", "agents", "prompts", "skills", "customizations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/DJ2695/custom-copilot"
Repository = "https://github.com/DJ2695/custom-copilot"
Issues = "https://github.com/DJ2695/custom-copilot/issues"

[project.scripts]
cuco = "custom_copilot.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["custom_copilot", "custom_copilot.commands"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
custom_copilot = ["registry/**/*"]
